--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     </li>
                     <li><h1>José Figueiredo</h1></li>
                     <div class="menu">
-                        <li><a href="file:///C:/Users/Jose%20Figueiredo/Desktop/Projects/PersonalWebsite/index.html#title1">About Me</a></li>
-                        <li><a href="file:///C:/Users/Jose%20Figueiredo/Desktop/Projects/PersonalWebsite/index.html#title2">Experience</a></li>
-                        <li><a href="file:///C:/Users/Jose%20Figueiredo/Desktop/Projects/PersonalWebsite/index.html#title3">Education</a></li>
-                        <li><a href="file:///C:/Users/Jose%20Figueiredo/Desktop/Projects/PersonalWebsite/index.html#title4">Projects</a></li>
+                        <li><a href="https://figueiredo-jml.github.io/Portfolio/#title1">About Me</a></li>
+                        <li><a href="https://figueiredo-jml.github.io/Portfolio/#title2">Experience</a></li>
+                        <li><a href="https://figueiredo-jml.github.io/Portfolio/#title3">Education</a></li>
+                        <li><a href="https://figueiredo-jml.github.io/Portfolio/#title4">Projects</a></li>
                     </div>
                 </ul>
                 <button id="modalButton">Contacts</button>
